/* Verb */ Links and dates added <come#26688730>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -21,9 +21,9 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 
 # {{label|en|intransitive}} To [[move]] from further [[away]] to [[near]]er to.
 #: {{ux|en|She’ll be '''coming''' ’round the mountain when she '''comes'''{{...}}}}
-#* Shakespeare
+#* {{w|William Shakespeare}} (1564-1616)
 #*: Look, who '''comes''' yonder?
-#* Tennyson
+#* {{w|Alfred, Lord Tennyson|Alfred Tennyson}} (1809-1892)
 #*: I did not '''come''' to curse thee.
 # {{label|en|intransitive}} To [[arrive]].
 #: {{ux|en|The guests '''came''' at eight o'clock.}}
@@ -32,7 +32,7 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 |passage=Then '''came''' a maid with hand-bag and shawls, and after her a tall young lady. She stood for a moment holding her skirt above the grimy steps,{{...}}, and the light of the reflector fell full upon her.}}
 # {{label|en|intransitive}} To [[appear]], to [[manifest]] itself.
 #: {{ux|en|The pain in his leg '''comes''' and goes.}}
-#* ''Hudibras''
+#* {{w|Samuel Butler (poet)|Samuel Butler}} (1613-1680), ''{{w|Hudibras}}''
 #*: when butter does refuse to '''come''' [i.e. to form]
 # {{label|en|intransitive}} To take a position to something else in a [[sequence]].
 #: {{ux|en|Which letter '''comes''' before Y?&nbsp;&nbsp; Winter '''comes''' after autumn.}}
@@ -48,7 +48,7 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 #: {{ux|en|He '''came''' to SF literature a confirmed technophile, and nothing made him happier than to read a manuscript thick with imaginary gizmos and whatzits.}}
 # {{label|en|copulative|archaic}} To [[become]], to [[turn out]] to be.
 #: {{ux|en|He was a dream '''come''' true.}}
-#* Shakespeare
+#* {{w|William Shakespeare}} (1564-1616)
 #*: How '''come''' you thus estranged?
 # {{label|en|intransitive}} To be supplied, or made available; to exist.
 #: {{ux|en|He's as tough as they '''come'''.&nbsp;&nbsp; Our milkshakes '''come''' in vanilla, strawberry and chocolate flavours.}}
