/* Translations */ correct. <branch#26692149>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -205,7 +205,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Polish: {{t+|pl|gałąź|f}}, {{t+|pl|dział|m}}
 * Portuguese: {{t+|pt|divisão|f}}, {{t+|pt|ramo|m}} {{qualifier|in science, in arts}}
 {{trans-mid}}
-* Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}, {{t+|ro|branșă|f}}
+* Romanian: {{t+|ro|ramură|f}}, {{t+|ro|branșă|f}}
 * Russian: {{t+|ru|отрасль|f|tr=ótraslʹ|sc=Cyrl}}, {{t+|ru|область|f|tr=óblastʹ|sc=Cyrl}}
 * Scots: {{t|sco|brainch}}
 * Scottish Gaelic: {{t|gd|meur|f}}
