--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -30,7 +30,7 @@
 *: Mandarin: {{t+|cmn|捷克共和國|sc=Hani}}, {{t|cmn|捷克共和国|tr=Jiékè Gònghéguó|sc=Hani}}, {{t+|cmn|捷克|tr=Jiékè|sc=Hani}}
 * Chuvash: {{t|cv|Чех Республики|tr=Čeh Respubliki|sc=Cyrl}}
 * Crimean Tatar: {{t|crh|Çeh Cumhuriyeti}}
-* Czech: {{t+|cs|Česká republika|f}}, {{t+|cs|Česko|n}}, {{t+|cs|Čechy|p}}
+* Czech: {{t+|cs|Česká republika|f}}, {{t+|cs|Česko|n}}
 * Danish: {{t+|da|Tjekkiet}}
 * Dutch: {{t+|nl|Tsjechische Republiek}}, {{t+|nl|Tsjechië|n}}
 * Esperanto: {{t|eo|Ĉeĥio}}
