--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -33,15 +33,15 @@
 ===Verb===
 {{zh-verb}}
 
-# {{cx|Beginning Mandarin|lang=zh|sort=shi4}} [[is]]; to [[be]]
-#: {{usex|lang=cmn|泰晤士河'''是'''英国第二长的河流。|tr=Tàiwùshì hé '''shì''' Yīngguó dì'èr cháng de héliú.|t=The River Thames '''is''' the second longest river in the UK.}}
+# {{cx|Beginning Mandarin|lang=zh|sort=shi4}} [[is]]; to [[be]] (copula)
+#: {{zh-usex|泰晤士河 是 ^英國 第二 長 的 河流。|The River Thames '''is''' the second longest river in the UK.|link=yes}}
 
 ====Usage note====
 Even if it is translated as to [[be]], 是 is used only to link two nouns.
-{{zh-usex|我 是 老师|I am a teacher}} {{zh-usex|我 是 中国人|I am Chinese.}}
+{{zh-usex|我 是 老師|I am a teacher}} {{zh-usex|我 是 中國人|I am Chinese.|inline=yes}}
 It can't be used to link a noun and an adjective. The following sentence is wrong : 这是好。
 The correct sentence is
-{{zh-usex|这 很 好|This is good}}
+{{zh-usex|這 很 好|This is good|inline=yes}}
 Here [[很]] does not mean "very". It is used as a filler, to link a noun and an adjective.
 
 ====See also====
