--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -58,6 +58,10 @@ Here [[很]] does not mean "very". It is used as a filler, to link a noun and an
 
 # [[right]], [[true]], [[correct]]
 
+====Compounds====
+* {{zh-l|是否}}
+* {{zh-l|是非}}
+
 ===References===
 * {{cite web
 | url = http://www.mdbg.net/chindict/chindict.php?page=worddict&wdrst=0&wdqb=是
