t+nb:[[narkotika]] t+nb:[[stoff]] t+nb:[[substans]] t-balance ([[WT:EDIT|Assisted]]) <substance#26718455>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -137,6 +137,7 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 * Hungarian: {{t+|hu|szer}}
 {{trans-mid}}
 * Norwegian: {{t+|no|narkotika}}
+*: Bokmål: {{t+|nb|narkotika|n}}, {{t+|nb|stoff|n}}, {{t|nb|substans|m}}
 * Polish: {{t+|pl|narkotyk|m}}
 * Portuguese: {{t+|pt|substância|f}}
 * Romanian: {{t+|ro|drog|n}}, {{t|ro|droguri|n-p}}, {{t+|ro|narcotic|n}}
