--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -131,10 +131,7 @@
 
 # the [[earth]]
 # [[land]]
-#: [[地]][[是]][[空虛]][[混沌]]。[[淵面]][[黑暗]]。[[神]][[的]][[靈]][[運行]][[在]][[水面]][[上]]。
-#: [[地]][[是]][[空虚]][[混沌]]。[[渊面]][[黑暗]]。[[神]][[的]][[灵]][[运行]][[在]][[水面]][[上]]。
-#: [[dì|Dì]] [[shì]] [[kōngxū]] [[hùndùn]].  [[yuānmiàn|Yuānmiàn]] [[hēi'àn]].  [[Shén]] [[de]] [[líng]] [[yùnxíng]] [[zài]] [[shuǐmiàn]] [[shang]].
-#:: The earth was without form, and void; and darkness was upon the face of the deep.  And the Spirit of God moved upon the face of the waters.
+#: {{zh-usex|地 是 空虛 混沌。^淵面 黑暗。^神 的 靈 運行 在 水面 上。|The earth was without form, and void; and darkness was upon the face of the deep.  And the Spirit of God moved upon the face of the waters.|link=yes}}
 
 ====References====
 * [http://wordproject.org/multi/bi_en_cn_py.htm Bible Genesis Chapter 1 verse 2]
