t+fur:[[costâ]] ([[WT:EDIT|Assisted]]) <cost#26788171>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -205,6 +205,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * Esperanto: {{t|eo|kosti}}
 * Finnish: {{t+|fi|maksaa}}
 * French: {{t+|fr|coûter}}
+* Friulian: {{t|fur|costâ}}
 * Galician: {{t|gl|custar}}
 * {{trreq|ka}}
 * German: {{t+|de|kosten}}
