--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -365,6 +365,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 [[Category:English verbs with base form identical to past participle]]
 [[Category:en:Behaviour]]
 [[Category:Italian interrogative adverbs]]
+[[Category:en:Sex]]
 
 ----
 
