--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -46,7 +46,7 @@
 * Estonian: {{qualifier|tortoise or turtle}} {{t|et|kilpkonn}}
 * Finnish: {{qualifier|tortoise or turtle}} {{t+|fi|kilpikonna}}
 * French: {{qualifier|tortoise or turtle}} {{t+|fr|tortue|f}}
-*: Old French: {{t|fro|welke|f}}
+*: Old French: {{t|fro|wecle|f}}
 * German: {{qualifier|tortoise or turtle}} {{t+|de|Schildkröte|f}}
 * Greek: {{qualifier|tortoise or turtle}} {{t+|el|χελώνα|f|tr=chelóna|sc=Grek}}
 * Hebrew: {{qualifier|tortoise or turtle}} {{t+|he|צב|m|tr=tzav|sc=Hebr}}
