--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -59,7 +59,7 @@ From {{etyl|enm|en}} {{term|flesh|lang=enm}}, from {{etyl|ang|en}} {{m|ang|flǣs
 * Danish: {{t+|da|kød}}
 * Dutch: {{t+|nl|vlees|n}}
 * Finnish: {{t+|fi|liha}}
-* French: {{t+|fr|chair}}
+* French: {{t+|fr|viande}}
 * German: {{t+|de|Fleisch|n}}
 * Greek: {{t+|el|σάρκα|f|tr=sárka|sc=Grek}}
 * Hungarian: {{t+|hu|hús}}
