t+fr:[[rideau]] ([[WT:EDIT|Assisted]]) <curtain#26840338>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -55,7 +55,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * {{trreq|et}}
 * Faroese: {{t|fo|gardina|f}}, {{t|fo|gluggatjald|n}}
 * Finnish: {{t+|fi|verho}}
-* French: {{t+|fr|voil|m}}
+* French: {{t+|fr|voil|m}}, {{t+|fr|rideau|m}}
 * Galician: {{t|gl|cortina|f}}
 * Georgian: {{t|ka|ფარდა|tr=p'arda|sc=Geor}}
 * German: {{t+|de|Vorhang|m}}, {{t+|de|Gardine|f}}
