--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -7,7 +7,8 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=13|four=5333<sub>0</sub>|canj=戈口心 (IRP)|ids=⿱[[咸]][[心]]}}
 
-# [[feel]], [[perceive]], [[emotion]]
+# [[feel]], [[perceive]]
+# [[emotion]]
 
 ====Derived terms====
 * [[憾]]
