/* English */ +citations <saffron#26887797>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -1,8 +1,8 @@
 {{also|Saffron}}
 ==English==
-{{slim-wikipedia}}
-[[Image:Iran saffron threads.jpg|thumb|Saffron threads used as a culinary seasoning. ]]
-[[Image:Crocus_sativus_sahuran.jpg|thumb|The saffron crocus plant.]]
+[[Image:Crocus_sativus_sahuran.jpg|thumb|''Crocus sativus'']]
+[[Image:Iran saffron threads.jpg|thumb|Saffron (spice): the dried threads from the stigma of ''Crocus sativus'']]
+{{wikipedia}}
 
 ===Etymology===
 From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safranum|lang=la}}, from {{etyl|ar|en}} {{term|زَعْفَرَان|tr=zaʾfarān|lang=ar}}, possibly from {{etyl|fa|en}} {{m|fa|tr=zar-parân|*زرپران}}.
@@ -10,11 +10,27 @@ From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safra
 ===Noun===
 {{en-noun|~}}
 
-# The saffron crocus plant, ''[[Crocus sativus]]''.
-# A [[seasoning]] made from the [[stigma]] of the saffron plant.
-# A [[dye]] made from the [[stigma]] of the saffron plant.
-# An [[orange]]-[[yellow]] [[color|colour]]. The color of a lion.
+# The plant ''[[Crocus sativus]]'', a [[crocus]].
+#* '''2009''', D. H. Sanaeinejad, S. N. Hosseini, ''Regression Models for '''Saffron''' Yields in Iran'', Daoliang Li, Chunjiang Zhao (editors), ''Computer and Computing Technologies in Agriculture II'', Volume 1, [http://books.google.com.au/books?id=DybQsneDddYC&pg=PA510&dq=%22saffron%22%7C%22saffrons%22&hl=en&sa=X&ei=mAOHU4PEFJCtkgWF5YGgAQ&redir_esc=y#v=onepage&q=%22saffron%22%7C%22saffrons%22&f=false page 510],
+#*: Usually the maximum temperature for October, November and December in the southern parts of Khorassan–the main '''saffron''' growing area of the Iran-does not exceed 20°C, while the minimum temperature reaches 0°C.
+# A [[spice]] ([[seasoning]]) and colouring agent made from the [[stigma]] and part of the [[style]] of the plant, sometimes or formerly also used as a dye and insect repellent.
+#* '''1658''', [[w:Thomas Muffet|Thomas Muffet]], ''The Theatre of Insects'', [1634, ''Insectorum sive Minimorum Animalium Theatrum''], quoted in '''2008''', Anna Suranyi, ''The Genius of the English Nation: Travel Writing and National Identity in Early Modern England'', [http://books.google.com.au/books?id=DcV8ZE6uz7MC&pg=PA118&dq=%22saffron%22%7C%22saffrons%22&hl=en&sa=X&ei=mAOHU4PEFJCtkgWF5YGgAQ&redir_esc=y#v=onepage&q=%22saffron%22%7C%22saffrons%22&f=false page 117-118],
+#*: The Irish and Ireland people (who are frequently troubled with lice, and such as will fly, as they say, in summer) anoint their shirts with '''saffron''', and to very good purpose, to drive away the lice, but after six months they wash their shirts again, putting fresh '''saffron''' into the lye.
+#* '''2002''', James A. Duke (editor), ''CRC Handbook of Medicinal Spices'', [http://books.google.com.au/books?id=g_OCl6P0vsYC&pg=PA129&dq=%22saffron%22%7C%22saffrons%22&hl=en&sa=X&ei=mAOHU4PEFJCtkgWF5YGgAQ&redir_esc=y#v=onepage&q=%22saffron%22%7C%22saffrons%22&f=false page 129],
+#*: '''Saffron''' is not included in American and British pharmacopoeias, but some Indian medical formulae still include it.
+#* '''2004''', Melitta Weiss Adamson, ''Food in Medieval Times'', [http://books.google.com.au/books?id=jtgud2P-EGwC&pg=PA15&dq=%22saffron%22%7C%22saffrons%22&hl=en&sa=X&ei=mAOHU4PEFJCtkgWF5YGgAQ&redir_esc=y#v=onepage&q=%22saffron%22%7C%22saffrons%22&f=false page 15],
+#*: '''Saffron''' is the stigma of the crocus flower, which is harvested by hand, dried, and sold either in strands or ground to powder.{{...}}Of all the medieval spices, '''saffron''' was the most expensive, which is not surprising given that 70,000 flowers only yield one pound of dried stigmas. In the European cookbooks of the late Middle Ages, nearly all of which which reflect refined upper-class dining, '''saffron''' is ubiquitous.
+#* '''2011''', Mathew Attokaran, ''Natural Food Flavors and Colorants'', [http://books.google.com.au/books?id=9qcvAoMPYW4C&pg=RA1-PA87-IA4&dq=%22saffron%22%7C%22saffrons%22&hl=en&sa=X&ei=mAOHU4PEFJCtkgWF5YGgAQ&redir_esc=y#v=onepage&q=%22saffron%22%7C%22saffrons%22&f=false unnumbered page],
+#*: '''Saffron''' is often called the “golden spice.”
+# An [[orange]]-[[yellow]] [[colour]], the colour of a lion's pelt.
 #: {{color panel|F4C430}}
+#* '''1973''', Anthony Powell, ''[[w:Temporary Kings|Temporary Kings]]'', [http://books.google.com.au/books?id=1vHrhepiZ7MC&pg=PA82&dq=%22saffrons%22&hl=en&sa=X&ei=ZkOHU5iBDMWnkgWd8IGoBA&redir_esc=y#v=onepage&q=%22saffrons%22&f=false page 82],
+#*: These colours might have been expressly designed—by dissonance as much as harmony—for juxtaposition against those pouring down in brilliant rays of light from the Tiepolo; subtle yet penetrating pinks and greys, light blue turning almost to lavender, rich '''saffrons''' and cinnamons melting into bronze and gold.
+#* '''2011''', Seth Hunter, ''The Winds of Folly'', [http://books.google.com.au/books?id=OKVsPY6RjtgC&pg=PT127&dq=%22saffrons%22&hl=en&sa=X&ei=ZkOHU5iBDMWnkgWd8IGoBA&redir_esc=y#v=onepage&q=%22saffrons%22&f=false unnumbered page],
+#*: The classical shades of Antiquity were the most prevalent, but along with the Venetian reds and Egyptian blues, the '''saffrons''' and ochres and indigos, were more delicate hues: of pink and cream and lilac, like shells littered upon the shore.
+
+====Usage notes====
+The distinction between the ''plant'' and ''spice'' senses is often blurred.
 
 ====Synonyms====
 * {{sense|colour}} [[saffron yellow]]
@@ -169,7 +185,7 @@ From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safra
 ===Adjective===
 {{en-adj|?}}
 
-# Having a orange-yellow colour.
+# Having an orange-yellow colour.
 
 ====Translations====
 {{trans-top|colour}}
@@ -190,9 +206,10 @@ From {{etyl|fro|en}} {{term|safran|lang=fro}}, from {{etyl|ML.|en}} {{term|safra
 {{trans-bottom}}
 
 ===Derived terms===
-* [[bastard saffron]]
+* {{vern|bastard saffron}} ({{taxlink|Cassine peragua|species}})
 * [[dyer's saffron]]
-* [[meadow saffron]]
+* {{vern|meadow saffron}} ({{taxlink|Colchicum autumnale|species}})
+* {{vern|saffron finch}} ({{taxlink|Sicalis flaveola|species}})
 * [[Saffron Walden]]
 * [[saffron wood]]
 * [[saffron yellow]]
