--- a/en/偳/偳.11139.wikitext
+++ b/en/偳/偳.11139.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人山一月 (OUMB)}}
+{{Han char|rn=9|rad=人|as=09|sn=11|four=2222<sub>7</sub>|canj=人山一月 (OUMB)|ids=⿰[[亻]][[耑]]}}
 
 # {{defn|Han|sort=人09}}
 
