--- a/en/昬/昬.16980.wikitext
+++ b/en/昬/昬.16980.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=口心日 (RPA), X口心日 (XRPA)}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=|canj=口心日 (RPA), X口心日 (XRPA)|ids=⿱[[民]][[日]]}}
 
 # dusk, dark confused
 # [[stupid]]
