--- a/en/坥/坥.13032.wikitext
+++ b/en/坥/坥.13032.wikitext
@@ -13,7 +13,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=[[ceoi1]]|y=cheui1}}
+{{yue-hanzi|jyut=ceoi1|y=cheui1}}
 
 # {{defn|lang=yue|sort=土05}}
 
