t+frp:[[tonêrro]] ([[WT:EDIT|Assisted]]) <thunder#27024614>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -68,6 +68,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Esperanto: {{t|eo|tondro}}
 * Estonian: {{t|et|kõu}}
 * Finnish: {{t|fi|jyrinä}}, {{t|fi|jyrähdys}}
+* Franco-Provençal: {{t|frp|tonêrro|m}}
 * French: {{t+|fr|tonnerre|m}}
 * Friulian: {{t|fur|ton}}, {{t|fur|tonade}}
 * Georgian: {{t|ka|ქუხილი|sc=Geor}}, {{t|ka|ჭექა-ქუხილი|sc=Geor}}
