--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -25,6 +25,7 @@ i.e. differs from [[viz.]] in that what follows merely restates what was said in
 
 ====Translations====
 {{trans-top|that is}}
+* Afrikaans: {{t|af|d.w.s.}}
 * Arabic: {{t|ar|يعني|tr=yáʕni}}
 * Armenian: {{t|hy|այսինքն|tr=aysink’n}}
 * Bulgarian: {{t|bg|т.е.|tr=toest|sc=Cyrl}}
