--- a/en/偶/偶.11142.wikitext
+++ b/en/偶/偶.11142.wikitext
@@ -5,20 +5,31 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=2622<sub>7</sub>|canj=人田中月 (OWLB)|ids=⿰[[亻]][[禺]]}}
 
-# [[accidentally]], [[coincidentally]]
-# [[idol]]
-
 ====References====
 * {{Han ref|kx=0112.010|dkj=00899|dj=0238.090|hdz=10190.030|uh=5076|ud=20598|bh=B0B8|bd=45240}}
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|[[偶]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=ngau5|y=ngau5}}
+===Pronunciation===
+{{zh-pron
+|m=ǒu
+|c=ngau5
+|cat=n,a
+}}
 
-# {{defn|lang=yue|sort=人09}}
+===Noun===
+{{zh-noun}}
+
+# [[idol]], [[image]]
+# [[couple]], [[pair]]
+
+===Adjective===
+{{zh-adj}}
+
+# [[even]] (number)
 
 ----
 
@@ -58,31 +69,6 @@
 {{ko-hanja|hangeul=우|rv=u|mr=u}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[ǒu]] ([[ou3]]), [[zán]] ([[zan2]])|wg=ou<sup>3</sup>, tsan<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
-
-===Adverb===
-{{cmn-adv|ts|pin=|pint=}}
-
-# [[accidentally]], [[coincidentally]]
-
-===Noun===
-{{cmn-noun|ts|pin=|pint=}}
-
-# an [[idol]] (either a statue that is prayed to or a human celebrity with many ardent fans)
-
-----
-
-==Middle Chinese==
-===Han character===
-'''偶''' (*ngǒu)
 
 ----
 
