--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -66,7 +66,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|spelt||spelt, corn|lang=ang}},
 * Slovene: {{t|sl|pira|f}}
 * Spanish: {{t|es|espelta|f}}, {{t+|es|escanda|f}}
 * Swedish: {{t|sv|dinkel}}, {{t+|sv|spelt}}
-* Walloon: {{t|wa|speate}}
+* Walloon: {{t|wa|speate|f}}
 {{trans-bottom}}
 
 ===Etymology 3===
