--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -166,6 +166,10 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Vietnamese: {{t+|vi|nôn}}, {{t+|vi|mửa}}
 {{trans-bottom}}
 
+{{trans-top|the act of vomiting}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ====See also====
 * [[emetic]]
 
