t+mi:[[ruakitanga]] ([[WT:EDIT|Assisted]]) <vomit#27126940>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -168,6 +168,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 
 {{trans-top|the act of vomiting}}
 {{trans-mid}}
+* Maori: {{t|mi|ruakitanga}}
 {{trans-bottom}}
 
 ====See also====
