/* Derived terms */ <speak#27133254>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -289,14 +289,18 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 #: ''Corporate speak; IT speak''
 
 ====Derived terms====
+{{rel-top3|Terms derived from ''speak'' (noun)}}
 * [[artspeak]]
 * [[cyberspeak]]
 * [[doublespeak]]
+{{rel-mid3}}
 * [[lawyerspeak]]
+* [[leetspeak]]
 * [[medspeak]]
+{{rel-mid3}}
 * [[Newspeak]]
 * [[weather speak]]
-* [[leetspeak]]
+{{rel-bottom}}
 
 ====Translations====
 {{trans-top|jargon/terminology}}
