--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -84,7 +84,7 @@
 * Maori: {{t|mi|Ngā Whenua Tōpū o Amerika}}, {{t|mi|Amerika}}
 * Marathi: {{t|mr|अमेरिकेची संयुक्त संस्थाने|tr=amerikecī sanyukta sansthāne|sc=Deva}}
 * Mongolian: {{t+|mn|Америкийн Нэгдсэн Улс|sc=Cyrl}}
-* Māori: {{t|mi|Hononga-o-Amerika}}
+* Maori: {{t|mi|Hononga-o-Amerika}}
 * Navajo: {{t|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}
 * Nepali: {{t|ne|संयुक्त राज्य अमेरिका|tr=sanyukta rājya amerikā|sc=Deva}}
 * Northern Sami: {{t|se|Amerihká ovttastuvvan stáhtat}}
