--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -184,6 +184,7 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Bulgarian: {{t+|bg|решавам}}
 * Chinese:
 *: Mandarin: {{t+|cmn|決定|sc=Hani}}, {{t+|cmn|决定|tr=juédìng|sc=Hani}}
+* Czech: {{t|cs|zvolit}}
 * Danish: {{t|da|foretrække}}, {{t|da|have lyst}}, {{t|da|finde for godt}}
 * Dutch: {{t+|nl|kiezen}}
 * Finnish: {{t|fi|[[päättää]] [[tehdä]]}}
