--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -48,6 +48,9 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Hungarian: {{t+|hu|ikon}}
 * Italian: {{t+|it|icona|f}}
 * Jèrriais: {{t|roa-jer|icône|f}}
+* Norwegian:
+*: Bokmål: {{t+|nb|ikon|m|n}}
+*: Nynorsk: {{t|nn|ikon|m|n}}
 {{trans-mid}}
 * Polish: {{t+|pl|ikona|f}}
 * Portuguese: {{t+|pt|ícone|m}}
@@ -81,6 +84,9 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Italian: {{t+|it|icona|f}}
 * Japanese: {{t|ja|聖像|tr=せいぞう, seizō}}
 * Latin: {{t+|la|icon|f}}
+* Norwegian:
+*: Bokmål: {{t+|nb|ikon|m|n}}
+*: Nynorsk: {{t|nn|ikon|m|n}}
 * Polish: {{t+|pl|ikona|f}}
 * Portuguese: {{t+|pt|ícone|m}}, {{t+|pt|ídolo|m}}
 * Romanian: {{t+|ro|icoană|f}}
@@ -131,6 +137,9 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Italian: {{t+|it|icona|f}}
 * Japanese: {{t+|ja|アイコン|tr=aikon}}
 * Jèrriais: {{t|roa-jer|icône}}
+* Norwegian: 
+*: Bokmål: {{t+|nb|ikon|m|n}}
+*: Nynorsk: {{t|nn|ikon|m|n}}
 * Polish: {{t+|pl|ikona|f}}, {{t|pl|ikonka|f}}
 * Portuguese: {{t+|pt|ícone|m}}
 * Romanian: {{t|ro|iconiță|f}}
