--- a/en/旷/旷.16927.wikitext
+++ b/en/旷/旷.16927.wikitext
@@ -15,7 +15,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=kwong3|tra=曠}}
+{{yue-hanzi|jyut=kwong3|y=kwong3|tra=曠}}
 
 # {{defn|lang=yue|sort=日03}}
 
