--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -134,6 +134,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * Hungarian: {{t|hu|szekreter}}
 * Interlingua: {{t|ia|bureau}}
 {{trans-mid}}
+* Italian: {{t+|it|scrittoio|m}}
 * Kurdish:
 *: Kurmanji: {{t+|kmr|sekreter}}
 * Portuguese: {{t+|pt|escrivaninha|f}}, {{t+|pt|secretária|f}}, {{qualifier|portugal}} {{t+|pt|secretária}}
