--- a/en/偈/偈.11096.wikitext
+++ b/en/偈/偈.11096.wikitext
@@ -16,7 +16,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=gai2, gai6 git6}}
+{{yue-hanzi|jyut=[[gai2]], [[gai6]], [[git6]]|y=gai2, gai6, git6}}
 
 # {{defn|lang=yue|sort=人09}}
 
