t+yue:[[法國]] t+yue:[[法国]] ([[WT:EDIT|Assisted]]) <France#27199839>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -66,6 +66,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Cebuano: {{t|ceb|Pransiya}}
 * Cherokee: {{t|chr|ᎦᎸᏥᏱ|tr=Galvtsiyi|sc=Cher}}
 * Chinese:
+*: Cantonese: {{t|yue|法國|sc=Hani}}, {{t|yue|法国|tr=faat3 gwok3|sc=Hani}}
 *: Mandarin: {{t|cmn|法國|sc=Hani}}, {{t+|cmn|法国|tr=Fǎguó|sc=Hani}}, {{t+|cmn|法蘭西|sc=Hani}}, {{t+|cmn|法兰西|tr=Fǎlánxī|sc=Hani}}
 *: Min Nan: {{t+|nan|法國|tr=Hoat-kok}}
 *: Teochew: Huag8gog4
