--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -228,7 +228,7 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 * Indonesian: {{t+|id|mentega}}
 * Ingrian: {{t|izh|voi}}
 * Interlingua: {{t|ia|butyro}}
-* {{trreq|ie}}
+* Interlingue: {{t|ie|buttre}}
 * Irish: {{t+|ga|im|m}}
 *: Old Irish: {{t|sga|imb|n}}
 * Italian: {{t+|it|burro|m}}
@@ -271,9 +271,11 @@ the origin of "butterfly" is uncertain, and so is given under "Related terms" in
 * Persian: {{t+|fa|کره|tr=kare}}, {{t+|fa|مسکه|tr=maske|sc=fa-Arab}}
 * Polish: {{t+|pl|masło|n}}
 * Portuguese: {{t+|pt|manteiga|f}}
+* {{trreq|pa}}
 * Romanian: {{t+|ro|unt|n}}
 * Romansch: {{t|rm|paintg|m}}
 * Russian: {{t+|ru|масло|n|tr=máslo}}, {{t+|ru|сливочное масло|n|tr=slívočnoje máslo}}
+* {{trreq|sgs}}
 * Sanskrit: {{t|sa|नवनीत|sc=Deva}}, {{t|sa|घृत|sc=Deva}}
 * Scottish Gaelic: {{t|gd|ìm|m}}
 * Serbo-Croatian:
