--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -37,6 +37,11 @@ Colloquial form of {{zh-l|作|to do}}, after the [[checked]] tone was lost in No
 # to [[give]] (a party, a reception)
 # {{cx|euphemism|lang=zh}} to [[make love]]
 
+====Synonyms====
+* {{zh-l|作}}
+* {{zh-l|辦/办}}
+* {{zh-l|幹/干}}
+
 ====Compounds====
 {{der3
 | {{zh-l|做愛/做爱}}
