--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -213,6 +213,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Urdu: {{t|ur|بولنا|tr=bolnā}}
 * Uyghur: {{t|ug|سۆزلىمەك|sc=ug-Arab}}, {{t|ug|ئېيتماق|sc=ug-Arab}}
 * Uzbek: {{t+|uz|gaplashmoq}}
+* Venetian: {{t|vec|parlar}}
 * Vietnamese: {{t+|vi|nói}}, {{t+|vi|nói chuyện}}, {{t|vi|nói được}}
 * Volapük: {{t+|vo|spikön}}
 * Welsh: {{t+|cy|siarad}}, {{t+|cy|llefaru}}
