t+nci:[[cuammaitl]] ([[WT:EDIT|Assisted]]) <branch#27206455>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -64,6 +64,7 @@ From {{etyl|enm|en}} {{term|branche|lang=enm}}, {{term|braunche|lang=enm}}, {{te
 * Catalan: {{t+|ca|branca|f}}
 * Chinese:
 *: Mandarin: {{t+|cmn|支|tr=zhī|sc=Hani}}, {{t|cmn|樹枝|sc=Hani}}, {{t+|cmn|树枝|tr=shùzhī|sc=Hani}}
+* Classical Nahuatl: {{t|nci|cuammāitl}}
 * Czech: {{t+|cs|větev|f}}
 * Dalmatian: {{t|dlm|ruoma|f}}
 * Dutch: {{t+|nl|tak}}
