t+sv:[[fånga]] t-balance ([[WT:EDIT|Assisted]]) <catch#27224885>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -352,8 +352,8 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Marathi: {{t|mr|पकडणे|tr=pakaḍaṇe|sc=Deva}}
 * Ngazidja Comorian: {{t|zdj|zingara|alt=uzingara}}
 * Polish: {{t|pl|łapać|impf}}, {{t|pl|złapać|pf}}
-{{trans-mid}}
 * Portuguese: {{t+|pt|pegar}}, {{t+|pt|capturar}}
+{{trans-mid}}
 * Romanian: {{t+|ro|prinde}}
 * Russian: {{t+|ru|лови́ть|impf}}, {{t+|ru|пойма́ть|pf}}
 * Sardinian:
@@ -365,6 +365,7 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|łojś|impf}}
 * Spanish: {{t+|es|capturar}}
+* Swedish: {{t+|sv|fånga}}
 * Ukrainian: {{t+|uk|лови́ти|impf}}, {{t+|uk|пійма́ти|pf}}
 
 {{trans-bottom}}
