--- a/en/块/块.13018.wikitext
+++ b/en/块/块.13018.wikitext
@@ -41,7 +41,22 @@
 ===Hanzi===
 {{cmn-hanzi|tra=塊|pin=[[kuài]] ([[kuai4]])|wg=k'uai<sup>4</sup>}}
 
-# {{defn|lang=cmn|sort=土04}}
+===Noun===
+{{cmn-noun|s|sim=块|tra=塊|pin=kuài}}
+
+# [[piece]]; [[chunk]]; [[lump]]; [[part]]
+#* {{zh-usex|把 肉 切成 小 '''块'''。|Cut the meat into bite-sized '''pieces'''.|link=y}}
+#*  {{zh-usex|它 被 割 成了 三 '''块'''。|It was cut into three '''parts'''.|link=y}} 	  
+# {{context|colloquial|followed by {{zh-l|錢‎/钱}}}} [[Yuan]] ({{zh-l|元}}), the Chinese currency or other currency
+#: {{zh-usex|一 块钱|a yuan, a dollar|link=y}}
+
+===Classifier===
+{{cmn-cls|s|sim=块|tra=塊|pin=kuài}}
+
+# {{n-g|classifier for piece of something (food, cloth, stone);}} piece of; chunk of
+#* {{zh-usex|一 块 蛋糕|a piece of cake|link=y}}
+#* {{zh-usex|一 块 木头|a piece of wood|link=y}}
+
 
 [[Category:Mandarin entries with audio links]]
 
