/* Verb */ Example added and sense tidied <come#27243295>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -56,17 +56,18 @@ Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{ter
 #: {{ux|en|You can't '''come''' any tricks here.}}
 # {{label|en|intransitive}} Happen.
 #: {{ux|en|This kind of accident '''comes''' when you are careless.}}
-# {{label|en|intransitive|with ''from''}}
+# {{label|en|intransitive|with ''from'' or sometimes ''of''}} To have a social background.
 ## To be or have been a resident or native.
 ##: {{ux|en|Where did you '''come''' from?}}
-## {{label|en|also with ''of''}} from a specific family
-##: {{ux|en|He '''comes''' from a good family.}}
+## To have been brought up by or employed by.
+##: {{ux|en|She '''comes''' from a good family.}}
+##: {{ux|en|He '''comes''' from a disreputable legal firm.}}
 # {{label|en|intransitive|of ''grain''}} To germinate.
 
 ====Usage notes====
 A few old texts use ''[[comen]]'' as the past participle.
 
-The phrase "dream come true" is a set phrase; the verb "come" in the sense "become" is archaic outside of that<!-- and other--> set phrase<!--s-->.
+The phrase "dream come true" is a set phrase; the verb "come" in the sense "become" is archaic outside of that<!-- and other--> set phrase<!--s-->.<!-- how about "come about"???? -->
 
 The collocations “[[come with]]” and “[[come along]]” mean {{term|accompany|lang=en}}, used as “Do you want to come with me?” and “Do you want to come along?” In the Midwestern American dialect, “come with” can occur without a following object, as in “Do you want to come with?” In this dialect, “with” can also be used in this way with some other verbs, such as “take with”. Examples of this may be found in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American Buffalo}}.''<ref>[http://positiveanymore.blogspot.com/2006/04/chicago-dialect.html Chicago Dialect]</ref> This objectless use is not permissible in other dialects.
 
