--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -311,6 +311,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 
 ====See also====
 * [[cam'st]]
+* [[come about]]
 * [[kingdom come]]
 
 ===Noun===
