--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -23,7 +23,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 # A [[raisin]], when used in a pudding or cake.
 # {{context|pejorative|lang=en}} A [[fool]], [[idiot]]
 # {{context|slang|usually in plural|lang=en}} A [[testicle]].
-# The edible, fleshy stone fruit of {{taxlink|Prunus mume|species|species|noshow=1}}, an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
+# The edible, fleshy stone fruit of {{taxlink|Prunus mume|species|noshow=1}}, an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
 # The tree which bears this fruit, ''Prunus mume''. See ''[[plum blossom]]''.
 
 =====Synonyms=====
