--- a/en/惝/惝.15602.wikitext
+++ b/en/惝/惝.15602.wikitext
@@ -3,7 +3,7 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=11|four=9902<sub>7</sub>|canj=心火月口 (PFBR)|ids=⿰[[忄]][[尚]]}}
 
-# {{defn|Han|sort=心08}}
+# [[alarmed]], [[agitated]]
 
 ====References====
 * {{Han ref|kx=0391.120|dkj=10815|dj=0725.240|hdz=42315.020|uh=60DD|ud=24797|bh=D55C|bd=54620}}
