--- a/en/惝/惝.15602.wikitext
+++ b/en/惝/惝.15602.wikitext
@@ -13,7 +13,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=chong2, tong2}}
+{{yue-hanzi|jyut=[[cong2]], [[tong2]]|y=chong2, tong2}}
 
 # {{defn|lang=yue|sort=心08}}
 
