--- a/en/惝/惝.15602.wikitext
+++ b/en/惝/惝.15602.wikitext
@@ -43,7 +43,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[tǎng]] ([[tang3]])|wg=t'ang<sup>3</sup>}}
+{{cmn-hanzi|pin=[[chǎng]] ([[chang3]]), [[tǎng]] ([[tang3]])|wg=ch'ang<sup>3</sup>, t'ang<sup>3</sup>}}
 
 # {{defn|lang=cmn|sort=心08}}
 
