--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -67,14 +67,23 @@
 ===Hanzi===
 {{cmn-hanzi|pin=[[xiǎng]] ([[xiang3]])|wg=hsiang<sup>3</sup>}}
 
+===Verb===
+{{cmn-verb|ts|pin=xiǎng}}
+
 # [[think]] {{gloss|to conceive of something or someone}}
-# [[think]] {{gloss|to plan, to be considering}}
-# [[think]] {{gloss|to guess, to [[reckon]]}}
-# [[want]] {{gloss|to wish for or desire}}
-# [[miss]] {{gloss|to feel the absence of someone or something}}
+#* {{zh-usex|我 想 她 是 衰老 了。|I think she's going senile.|link=y}}	  
+# to [[think]] about; to [[plan]]; to be [[considering]]
+#* {{zh-usex|我 '''想''' 在 暑假 打工。|I'm '''planning''' to get a job for the summer.|link=y}}  
+# to [[think]]; to [[suppose]]; to [[guess]]; to [[reckon]]
+#* {{zh-usex|我 想 我 能 給 你 找到 合適 的 尺碼。|I think I can find the right size for you.|link=y}}  
+# to [[want]]; to [[wish]] for; to [[desire]]
+#* {{zh-usex|還 '''想''' 喝 一 杯 嗎？|Would you '''like''' another drink?|link=y}}  
+#* {{zh-usex|她 '''想''' 當 芭蕾舞 演員。|She '''wants''' to be a ballet dancer.|link=y}}	  
+# to [[miss]] {{gloss|to feel the absence of someone or something}}
+#* {{zh-usex|你 走 了 我 會 '''想''' 你 的。|I'll '''miss''' you when you're gone.|link=y}}  	
 
 ====Compounds====
-{{top3}}
+{{rel-top3}}
 * [[想必]]
 * [[想不到]]
 * [[想不开]]、[[想不開]]
@@ -88,7 +97,7 @@
 * [[想开]]、[[想開]]
 * [[想来]]、[[想來]]
 * [[想念]]
-{{mid3}}
+{{rel-mid3}}
 * [[想起]]
 * [[想起来]]、[[想起來]]
 * [[想入非非]]
@@ -101,7 +110,7 @@
 * [[想像力]]
 * [[想要]]
 * [[猜想]]
-{{mid3}}
+{{rel-mid3}}
 * [[感想]]
 * [[构想]]、[[構想]]
 * [[幻想]]
@@ -114,7 +123,7 @@
 * [[妄想]]
 * [[心想事成]]
 * [[意想]]
-{{bottom}}
+{{rel-bottom}}
 
 [[Category:Mandarin entries with audio links]]
 
