--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -31,7 +31,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * {{sense|edible fleshy fruit of ''Prunus mume''}} [[ume]]
 
 =====Derived terms=====
-{{rel-top4|Derived terms with proper nouns}}
+{{rel-top4|Derived terms (types of fruit trees)}}
 * [[American black plum]]
 * [[Assyrian plum]]
 * [[Australian plum]]
