/* Derived terms */ <plum#27269767>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -31,7 +31,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * {{sense|edible fleshy fruit of ''Prunus mume''}} [[ume]]
 
 =====Derived terms=====
-{{rel-top4|Derived terms (types of fruit trees)}}
+{{rel-top4|derived terms (types of fruit trees)}}
 * [[American black plum]]
 * [[Assyrian plum]]
 * [[Australian plum]]
@@ -68,8 +68,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * [[chickasaw plum]]
 * [[cocoa plum]], [[coco plum]], [[cocoplum]]
 * [[damascene plum]], [[damask plum]], [[damson plum]]
-* [[date plum]]
-* [[date-plum]]
+* [[date plum]], [[date-plum]]
 * [[dried plum]]<!--US advertisers' term for "prune", used with the intention of avoiding the negative connotations of that word-->
 * [[gingerbread plum]]
 * [[golden plum]]
@@ -77,15 +76,14 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * [[gray plum]], [[grey plum]]
 * [[ground plum]]
 * [[hog-plum]]
-{{rel-mid4}}
 * [[horse-plum]]
 * [[leaf curling plum aphid]]
+{{rel-mid4}}
 * [[marmalade plum]]
 * [[mountain plum]]
 * [[muscle plum]]
 * [[mussel plum]]
-* [[myrobalan plum]]
-* [[myrobella plum]]
+* [[myrobalan plum]], [[myrobella plum]]
 * [[olive-plum]]
 * [[partridge plum]]
 * [[pear-plum]]
