--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -31,7 +31,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * {{sense|edible fleshy fruit of ''Prunus mume''}} [[ume]]
 
 =====Derived terms=====
-{{rel-top4|derived terms (types of fruit trees)}}
+{{rel-top4|derived terms (types of fruit trees associated with places)}}
 * [[American black plum]]
 * [[Assyrian plum]]
 * [[Australian plum]]
@@ -58,7 +58,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 * [[Victoria plum]]
 * [[yellow Spanish plum]]
 {{rel-bottom}}
-{{rel-top4|Other derived terms}}
+{{rel-top4|other derived terms}}
 * [[apple-plum]]
 * [[beach plum]], [[beach-plum]]
 * [[black plum of Illawarra]]
