--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -191,6 +191,8 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 ====Declension====
 {{nl-decl-adj}}
 
+[[Category:nl:Hair]]
+
 ----
 
 ==French==
