t+br:[[brikenn]] ([[WT:EDIT|Assisted]]) <brick#27319202>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -64,7 +64,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Asturian: {{t|ast|lladriyu|m}}
 * Basque: {{t|eu|adreilu}}
 * Belarusian: {{t|be|цэгла|f|tr=céhla|sc=Cyrl}}
-* {{trreq|br}}
+* Breton: {{t+|br|brikenn|f}}
 * Bulgarian: {{t+|bg|тухла|f|tr=túhla|sc=Cyrl}}
 * Burmese: {{t+|my|အုတ်|tr=ok|sc=Mymr}}
 * Catalan: {{t|ca|maó|m}}
