--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -79,7 +79,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Faroese: {{t|fo|múrsteinur|m}}
 * Finnish: {{t+|fi|tiili}}
 * French: {{t+|fr|brique}}
-* {{trreq|fur}}
+* Friulian: {{t|fur|modon}}
 * Galician: {{t+|gl|ladrillo|m}}
 * Georgian: {{t|ka|აგჟრი|tr=agžri|sc=Geor}}, {{t|ka|აგური|tr=aguri|sc=Geor}}
 * German: {{t+|de|Backstein}}, {{t+|de|Ziegel|m}}
