--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -140,7 +140,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * Volapük: {{t+|vo|bakaston}}
 * Walloon: {{t|wa|brike}}
 * Welsh: {{t|cy|bricsen|f}}
-* {{trreq|yi}}
+* Yiddish: {{t|yi|ציגל|n|tr=tsigl|sc=Hebr}}
 {{trans-bottom}}
 
 {{trans-top|a building material}}
