--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -195,7 +195,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Rohingya: {{t|rhg|ai}}
 * Romanian: {{t|ro|veni}}
 * Romansch: {{t|rm|vegnir}}, {{t|rm|vagnir}}, {{t|rm|neir}}, {{t|rm|gnir}}
-* Russian: {{t+|ru|приходить|tr=prixodítʹ}} {{impf}}, {{t+|ru|прийти|tr=prijtí}} {{pf.}}; {{t+|ru|приезжать|tr=pryjezžátʹ|sc=Cyrl}} {{impf}}, {{t+|ru|приехать|tr=pryjéxatʹ|sc=Cyrl}} {{pf.}} {{qualifier|by transport}}
+* Russian: {{t+|ru|приходить|tr=prixodítʹ}} {{impf}}, {{t+|ru|прийти|tr=prijtí}} {{pf.}}; {{t+|ru|приезжать|tr=prijezžátʹ|sc=Cyrl}} {{impf}}, {{t+|ru|приехать|tr=prijéxatʹ|sc=Cyrl}} {{pf.}} {{qualifier|by transport}}
 * {{trreq|sa}}
 * Sardinian: {{t|sc|bènnere}}, {{t|sc|benni}}, {{t|sc|bènniri}}, {{t|sc|vènnere}}
 * Scots: {{t|sco|cum}}
