--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -118,7 +118,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Afrikaans: {{t|af|kom}}
 * Albanian: {{t|sq|vij}}
 * Arabic: {{t|ar|جاء|tr=jāʾa}}, {{t|ar|حضر|tr=ḥáḍara}}, {{t+|ar|أتى|tr=ʾatā}}
-*: Egyptian Arabic: {{t|arz|جا|tr=gā|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|جا|tr=gā|sc=Arab}}, {{t|arz|جه|tr=geh|sc=Arab}}
 *: Tunisian Arabic: {{t|aeb|جاء|tr=jāʾ|sc=Arab}}
 * Armenian: {{t+|hy|գալ|tr=gal|sc=Armn}}
 * Aromanian: {{t|rup|vin}}, {{t|rup|yin}}
