--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -109,6 +109,7 @@ From {{etyl|enm|en}} {{term|cost|lang=enm}}, {{term|coust|lang=enm}}, from {{ter
 * Japanese: {{t+|ja|費用|tr=[[ひよう]], hiyō}}
 {{trans-mid}}
 * Jèrriais: {{t|roa-jer|couôtage|m}}, {{t|roa-jer|couôtement|m}}
+* Korean: {{t+|ko|비용|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|به‌ها}}, {{t+|ku|نرخ}}
 * Latvian: {{t|lv|maksa|f}}, {{t|lv|cena|f}}, {{t|lv|dārdzība|f}}
