--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -12,6 +12,8 @@ From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}.
 # [[country]], [[land]]
 # [[territory]], [[district]], [[region]]
 # [[earth]], [[Earth]]
+#* {{RQ:Tanach|1|1|1|t=}}
+#*: {{lang|he|בְּרֵאשִׁית בָּרָא אֱלֹהִים אֵת הַשָּׁמַיִם וְאֵת '''הָאָרֶץ''':}}
 # [[ground]], [[soil]]
 # {{context|definite|popular|lang=he}} [[Israel]]
 
