--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -4,7 +4,7 @@
 From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}.
 
 ===Pronunciation===
-* {{a|IL}} {{IPA|/ˈerets/|lang=he}}
+* {{a|IL}} {{IPA|/ˈeret͡s/|lang=he}}
 
 ===Noun===
 {{he-noun|g=f|tr=érets|wv=אֶרֶץ|pl=ארצות|plwv=אֲרָצוֹת|cons=ארץ|conswv=אֶרֶץ־|plcons=ארצות|plconswv=אַרְצוֹת־|pausalwv=אָרֶץ|pausaltr=árets}}
