--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -12,8 +12,10 @@ From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}.
 # [[country]], [[land]]
 # [[territory]], [[district]], [[region]]
 # [[earth]], [[Earth]]
-#* {{RQ:Tanach|1|1|1|t=}}
-#*: {{lang|he|בְּרֵאשִׁית בָּרָא אֱלֹהִים אֵת הַשָּׁמַיִם וְאֵת '''הָאָרֶץ''':}}
+#* {{RQ:Tanach|1|1|1|t=JPS}}
+#*: {{lang|he|בְּרֵאשִׁית בָּרָא אֱלֹהִים אֵת הַשָּׁמַיִם וְאֵת '''הָאָרֶץ'''׃}}
+#*:: ''b'reshít bará 'elohím 'ét hashamáyim v'ét '''ha'árets'''.''
+#*:: In the beginning God created the heaven and '''the earth'''.
 # [[ground]], [[soil]]
 # {{context|definite|popular|lang=he}} [[Israel]]
 
