Orphaning [[Template:pf.]] and [[Template:impf]] <come#27410927>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -129,7 +129,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Bakhtiari: {{t|bqi|اودن|tr=aweðen|sc=fa-Arab}}
 * Basque: {{t|eu|etorri}}
 * Bavarian: {{t|bar|kemma}}
-* Belarusian: {{t|be|прыходзіць|impf|tr=pryxódzicʹ|sc=Cyrl}}, {{t|be|прыйсці|pf|sc=Cyrl}}, {{t|be|прыязджаць|impf|tr=pryjazdžácʹ|sc=Cyrl}}, {{t|be|прыехаць|tr=pryjéxacʹ|sc=Cyrl}} {{pf.}} {{qualifier|by transport}}
+* Belarusian: {{t|be|прыходзіць|impf|tr=pryxódzicʹ|sc=Cyrl}}, {{t|be|прыйсці|pf|sc=Cyrl}}, {{t|be|прыязджаць|impf|tr=pryjazdžácʹ|sc=Cyrl}}, {{t|be|прыехаць|pf|tr=pryjéxacʹ|sc=Cyrl}} {{qualifier|by transport}}
 * Bengali: {{t|bn|আসা|tr=asha|sc=Beng}}
 * Bulgarian: {{t+|bg|идвам|impf|tr=ídvam}}, {{t|bg|дойда|pf|tr=dójda}}
 * Burmese: {{t+|my|လာ|tr=la|sc=Mymr}}
@@ -138,7 +138,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Chinese:
 *: Mandarin: {{t+|cmn|來|sc=Hani}}, {{t+|cmn|来|tr=lái|sc=Hani}}
 * Crimean Tatar: {{t|crh|kelmek}}
-* Czech: {{t+|cs|přicházet}} {{impf}}, {{t+|cs|přijít}} {{pf.}}; {{t|cs|přijíždět}} {{impf}}, {{t+|cs|přijet}} {{pf.}} {{qualifier|by transport}}
+* Czech: {{t+|cs|přicházet|impf}}, {{t+|cs|přijít|pf}}; {{t|cs|přijíždět|impf}}, {{t+|cs|přijet|pf}} {{qualifier|by transport}}
 * Dalmatian: {{t|dlm|vener}}
 * Danish: {{t|da|komme}}
 * Dutch: {{t+|nl|komen}}
@@ -189,20 +189,20 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Pashto: {{t|ps|راتلل|sc=ps-Arab}}
 * Persian: {{t+|fa|آمدن|tr=âmadan}}
 * Pipil: {{t|ppl|witz}}, {{t|ppl|huitz}}
-* Polish: {{t+|pl|przychodzić}} {{impf}}, {{t+|pl|przyjść}} {{pf.}}; {{t|pl|przyjeżdżać}} {{impf}}, {{t+|pl|przyjechać}} {{pf.}} {{qualifier|by transport}}
+* Polish: {{t+|pl|przychodzić|impf}}, {{t+|pl|przyjść|pf}}; {{t|pl|przyjeżdżać|impf}}, {{t+|pl|przyjechać|pf}} {{qualifier|by transport}}
 * Portuguese: {{t+|pt|vir}}
 * Quechua: {{t+|qu|hamuy}}
 * Rohingya: {{t|rhg|ai}}
 * Romanian: {{t|ro|veni}}
 * Romansch: {{t|rm|vegnir}}, {{t|rm|vagnir}}, {{t|rm|neir}}, {{t|rm|gnir}}
-* Russian: {{t+|ru|приходить|tr=prixodítʹ}} {{impf}}, {{t+|ru|прийти|tr=prijtí}} {{pf.}}; {{t+|ru|приезжать|tr=prijezžátʹ|sc=Cyrl}} {{impf}}, {{t+|ru|приехать|tr=prijéxatʹ|sc=Cyrl}} {{pf.}} {{qualifier|by transport}}
+* Russian: {{t+|ru|приходить|impf|tr=prixodítʹ}}, {{t+|ru|прийти|pf|tr=prijtí}}; {{t+|ru|приезжать|impf|tr=prijezžátʹ|sc=Cyrl}}, {{t+|ru|приехать|pf|tr=prijéxatʹ|sc=Cyrl}} {{qualifier|by transport}}
 * {{trreq|sa}}
 * Sardinian: {{t|sc|bènnere}}, {{t|sc|benni}}, {{t|sc|bènniri}}, {{t|sc|vènnere}}
 * Scots: {{t|sco|cum}}
 * Scottish Gaelic: {{t|gd|thig}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|доћи|sc=Cyrl}} {{pf.}}
-*: Roman: {{t|sh|doći}} {{pf.}}
+*: Cyrillic: {{t|sh|доћи|pf|sc=Cyrl}}
+*: Roman: {{t|sh|doći|pf}}
 * Sicilian: {{t+|scn|vèniri}}
 * Sinhalese: {{t|si|එනවා|tr=enavā|sc=Sinh}}
 * Slovak: {{t|sk|prichádzať|impf}}, {{t|sk|prísť|pf}}
@@ -222,7 +222,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Tocharian B: {{t|txb|käm-}}
 * Turkish: {{t+|tr|gelmek}}
 * Turkmen: {{t+|tk|gelmek}}
-* Ukrainian: {{t+|uk|приходити|tr=pryxódyty|sc=Cyrl}} {{impf}}, {{t|uk|прийти|tr=pryjtý|sc=Cyrl}} {{pf.}}; {{t|uk|приїжджати|tr=pryjiždžáty|sc=Cyrl}} {{impf}}, {{t|uk|приїхати|tr=pryjíxaty|sc=Cyrl}} {{pf.}} {{qualifier|by transport}}
+* Ukrainian: {{t+|uk|приходити|impf|tr=pryxódyty|sc=Cyrl}}, {{t|uk|прийти|pf|tr=pryjtý|sc=Cyrl}}; {{t|uk|приїжджати|impf|tr=pryjiždžáty|sc=Cyrl}}, {{t|uk|приїхати|pf|tr=pryjíxaty|sc=Cyrl}} {{qualifier|by transport}}
 * Urdu: {{t+|ur|آنا|tr=ānā}}
 * Uzbek: {{t+|uz|kelmoq}}
 * Venetian: {{t|vec|vegner}}
