--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -127,7 +127,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 *: Moroccan Arabic: {{t|ary|جر|tr=jerr}}, {{t|ary|جبد|tr=jbed}}
 * Armenian: {{t+|hy|քաշել|tr=k'ašel}}, {{t|hy|ձգել|tr=jgel}}
 * Azeri: {{t+|az|çəkmək}}
-* Belarusian: {{qualifier|abstract}} {{t|be|цягаць|tr=cjahác’|sc=Cyrl}} {{impf}}, {{t|be|пацягаць|tr=pacjahác’|sc=Cyrl}} {{pf.}}; {{qualifier|concrete}} {{t|be|цягнуць|tr=cjahnúcʹ|sc=Cyrl}} {{impf}}, {{t|be|пацягнуць|tr=pacjahnúcʹ|sc=Cyrl}} {{pf.}}
+* Belarusian: {{qualifier|abstract}} {{t|be|цягаць|impf|tr=cjahác’|sc=Cyrl}}, {{t|be|пацягаць|pf|tr=pacjahác’|sc=Cyrl}}; {{qualifier|concrete}} {{t|be|цягнуць|impf|tr=cjahnúcʹ|sc=Cyrl}}, {{t|be|пацягнуць|pf|tr=pacjahnúcʹ|sc=Cyrl}}
 * Bulgarian: {{t+|bg|дърпам|tr=dǎrpam|sc=Cyrl}}, {{t+|bg|влека|tr=vleka|sc=Cyrl}}, {{t+|bg|влача|tr=vlača|sc=Cyrl}}
 * Burmese: {{t+|my|ဆွဲ|tr=hswè:|sc=Mymr}}
 * Catalan: {{t+|ca|tirar}}
@@ -166,11 +166,11 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Quechua: {{t|qu|aysay}}
 * Romanian: {{t+|ro|trage}}
 * Romansch: {{t|rm|trair}}
-* Russian: {{t+|ru|тянуть|impf|tr=tjanútʹ}}, {{t+|ru|потянуть|pf|tr=potjanútʹ}}, {{t+|ru|тащить|impf|tr=taščítʹ}}, {{t+|ru|потащить|pf|tr=potaščítʹ}}, {{t+|ru|тягать|tr=tjagátʹ|sc=Cyrl}} {{impf}} {{qualifier|abstract}}
+* Russian: {{t+|ru|тянуть|impf|tr=tjanútʹ}}, {{t+|ru|потянуть|pf|tr=potjanútʹ}}, {{t+|ru|тащить|impf|tr=taščítʹ}}, {{t+|ru|потащить|pf|tr=potaščítʹ}}, {{t+|ru|тягать|impf|tr=tjagátʹ|sc=Cyrl}} {{qualifier|abstract}}
 * Scottish Gaelic: {{t|gd|slaod}}, {{t|gd|tarraing}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|потезати}} {{impf}}, {{t|sh|потегнути}} {{pf.}}
-*: Roman: {{t+|sh|potezati}} {{impf}}, {{t+|sh|potegnuti}} {{pf.}}
+*: Cyrillic: {{t|sh|потезати|impf}}, {{t|sh|потегнути|pf}}
+*: Roman: {{t+|sh|potezati|impf}}, {{t+|sh|potegnuti|pf}}
 * Slovak: {{t|sk|tiahnuť|impf}}, {{t|sk|ťahať|impf}}, {{t|sk|potiahnuť|pf}}
 * Slovene: {{t|sl|tegniti}}
 * Spanish: {{t+|es|tirar}}, {{t+|es|jalar}}
@@ -179,7 +179,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Telugu: {{t+|te|లాగు|tr=laagu}}
 * Thai: {{t+|th|ดึง|tr=deung|sc=Thai}}
 * Turkish: {{t+|tr|çekmek}}
-* Ukrainian: {{qualifier|abstract}} {{t|uk|тягати|tr=tjaháty|sc=Cyrl}} {{impf}}, {{t|uk|потягати|tr=potjaháty|sc=Cyrl}} {{pf.}}; {{qualifier|concrete}} {{t|uk|тягти|tr=tjahtý|sc=Cyrl}} {{impf}}, {{t|uk|потягти|tr=potjahtý|sc=Cyrl}} {{pf.}}, {{t|uk|тягнути|tr=tjahnúty|sc=Cyrl}} {{impf}}, {{t|uk|потягнути|tr=potjahnúty|sc=Cyrl}} {{pf.}}
+* Ukrainian: {{qualifier|abstract}} {{t|uk|тягати|impf|tr=tjaháty|sc=Cyrl}}, {{t|uk|потягати|pf|tr=potjaháty|sc=Cyrl}}; {{qualifier|concrete}} {{t|uk|тягти|impf|tr=tjahtý|sc=Cyrl}}, {{t|uk|потягти|pf|tr=potjahtý|sc=Cyrl}}, {{t|uk|тягнути|impf|tr=tjahnúty|sc=Cyrl}}, {{t|uk|потягнути|pf|tr=potjahnúty|sc=Cyrl}}
 * Urdu: {{t|ur|کهينچنا|tr=khī̃cnā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|kéo}}, {{t+|vi|giật}}
 * Walloon: {{t+|wa|saetchî}}, {{t+|wa|haetchî}}
