--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -174,7 +174,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Lithuanian: {{t+|lt|ateiti}}
 * Lojban: {{t+|jbo|klama}}
 {{trans-mid}}
-* Macedonian: {{t|mk|иде|impf|tr=íde|sc=Cyrl}}, {{t|mk|доаѓа|pf|tr=dóaǵa|sc=Cyrl}}
+* Macedonian: {{t|mk|дојде|pf|tr=dójde|sc=Cyrl}}, {{t|mk|доаѓа|impf|tr=dóaǵa|sc=Cyrl}}
 * Malay: {{t+|ms|datang}}, {{t|ms|mari}}
 * Maltese: {{t|mt|gie}}
 * Manchu: {{t|mnc|jimbi|sc=Mong}}
