t+sk:[[hrať]] t-balance t+fo:[[leika]] t+fo:[[spæla]] ([[WT:EDIT|Assisted]]) <play#27427982>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -176,6 +176,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Chinese:
 *: Mandarin: {{t+|cmn|演奏|tr=yǎnzòu|sc=Hani}}, {{qualifier|string instruments including piano}} {{t+|cmn|彈|sc=Hani}}, {{t+|cmn|弹|tr=tán|sc=Hani}}&{{qualifier|formal}}{{t|cmn|彈奏|sc=Hani}}, {{t+|cmn|弹奏|tr=tánzòu|sc=Hani}}, {{qualifier|string instruments with a bow such as violin}} {{t+|cmn|拉|tr=lā|sc=Hani}}, {{qualifier|wind instruments}} {{t+|cmn|吹|tr=chuī|sc=Hani}}&{{qualifier|formal}}{{t+|cmn|吹奏|tr=chuīzòu|sc=Hani}}, {{qualifier|percussion instruments, especially gong}} {{t+|cmn|敲|tr=qiāo|sc=Hani}}, {{qualifier|percussion instruments, especially drum}} {{t+|cmn|打|tr=dǎ|sc=Hani}}
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|bespelen}}
+* Faroese: {{t|fo|leika}}, {{t+|fo|spæla}}
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer|alt=jouer de}}
 * Galician: {{t+|gl|tocar}}
@@ -203,6 +204,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Quechua: {{t+|qu|takiy}}
 * Romanian: {{t+|ro|cânta}} (la)
 * Russian: {{t+|ru|игра́ть|impf}}, {{t+|ru|поигра́ть|pf}} (+ {{m|ru|на}} + [[prepositional case]])
+* Slovak: {{t|sk|hrať}}
 * Slovene: {{t+|sl|igrati}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|graś|impf}}
@@ -221,6 +223,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 *: Mandarin: {{t+|cmn|演奏|tr=yǎnzòu|sc=Hani}}, {{qualifier|string instruments including piano}} {{t+|cmn|彈|sc=Hani}}, {{t+|cmn|弹|tr=tán|sc=Hani}}&{{qualifier|formal}}{{t|cmn|彈奏|sc=Hani}}, {{t+|cmn|弹奏|tr=tánzòu|sc=Hani}}, {{qualifier|string instruments with a bow such as violin}} {{t+|cmn|拉|tr=lā|sc=Hani}}, {{qualifier|wind instruments}} {{t+|cmn|吹|tr=chuī|sc=Hani}}&{{qualifier|formal}}{{t+|cmn|吹奏|tr=chuīzòu|sc=Hani}}, {{qualifier|percussion instruments, especially gong}} {{t+|cmn|敲|tr=qiāo|sc=Hani}}, {{qualifier|percussion instruments, especially drum}} {{t+|cmn|打|tr=dǎ|sc=Hani}}
 * Czech: {{t+|cs|hrát}}
 * Dutch: {{t+|nl|spelen}}
+* Faroese: {{t|fo|leika}}, {{t+|fo|spæla}}
 * Finnish: {{t+|fi|soittaa}}
 * French: {{t+|fr|jouer}}
 * Galician: {{t+|gl|tocar}}
@@ -228,8 +231,8 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Greek: {{t+|el|παίζω}}
 * Hebrew: {{t|he|ניגן|tr=nigén}}
 * Hungarian: {{t+|hu|játszik}}
-{{trans-mid}}
 * Icelandic: {{t|is|spila}}
+{{trans-mid}}
 * Japanese: {{t+|ja|演奏|tr=えんそうする, ensō-suru|alt=演奏する|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|jouer}}, {{t|roa-jer|sonner}}
 * Kurdish:
@@ -241,6 +244,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Polish: {{t+|pl|grać}}
 * Portuguese: {{t+|pt|tocar}}
 * Russian: {{t+|ru|игра́ть|impf}}, {{t+|ru|поигра́ть|pf}}
+* Slovak: {{t|sk|hrať}}
 * Slovene: {{t+|sl|igrati}}
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|graś|impf}}
