--- a/en/愓/愓.15655.wikitext
+++ b/en/愓/愓.15655.wikitext
@@ -15,7 +15,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=心09}}
 
-# {{defn|lang=ja|sort=心09}}
+# [[profligate]]
 
 ====Readings====
 * {{ja-readings|on=[[とう]] (tō), [[どう]] (dō), [[しょう]] (shō), [[よう]] (yō)|kun=[[ほしいまま]] (hoshiimama)}}
