--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -1,6 +1,7 @@
-{{was wotd|2008|November|28}}
+{{also|zénith}}
 ==English==
-{{wikipedia}}
+{{slim-wikipedia}}
+{{was wotd|2008|November|28}}
 
 ===Etymology===
 From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, from {{etyl|fro|en}} {{term|cenit|lang=fro}} and/or {{etyl|la|en}} {{term|cenit|lang=la}}, a transliteration of {{etyl|ar|en}} {{term|سمت||direction, path|tr=samt|lang=ar|sc=Arab}} which is in itself a weak abbreviation of {{term|سمت الرأس||direction of the head|tr=samt ar-ra's|lang=ar|sc=Arab}}.
@@ -17,7 +18,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, fro
 #* '''1638''' Herbert, Sir Thomas ''Some years travels into divers parts of Asia and Afrique''
 #*: The 12 day wee had the wind high and large ſo that in two dayes ſaile we made the Sunne our '''Zenith''' or verticall point...
 #* '''1671–1693''': Rev. Thomas Jolly, ''private notebook''; printed in:
-#* '''1895''': Henry Fishwick (editor), ''The Note Book of the Rev. Thomas Jolly: A.D. 1671–1693. Extracts from the Church Books of Altham and Wymondhouses, 1649–1725. And an Account of the Jolly Family of Standish, Gorton, and Altham'', [http://books.google.co.uk/books?ei=L-9bSa-FKYuiyAS3xqmCDA&id=TA71Bp2xMq0C&dq=%22of+christ+and+his+gospell%2C%22&q=zenith&pgis=1#search_anchor page 44]
+#* '''1895''', Henry Fishwick (editor), ''The Note Book of the Rev. Thomas Jolly: A.D. 1671–1693. Extracts from the Church Books of Altham and Wymondhouses, 1649–1725. And an Account of the Jolly Family of Standish, Gorton, and Altham'', [http://books.google.co.uk/books?ei=L-9bSa-FKYuiyAS3xqmCDA&id=TA71Bp2xMq0C&dq=%22of+christ+and+his+gospell%2C%22&q=zenith&pgis=1#search_anchor page 44]
 #*: In this 10th m. appeared that prodigious Comett the tayl whereof was like the blade of a double edged sword, and reached almost from the horizon to the '''zenith'''.
 # {{context|astronomy|lang=en}} The [[highest]] point in the sky reached by a [[celestial body]].
 #* '''1719-''' [[w:Daniel Defoe|Daniel Defoe]], ''[[w:Robinson Crusoe|Robinson Crusoe]]''
