--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -148,7 +148,7 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|fēla
 * Belarusian: {{t|be|адчуваць|impf|tr=adčuvácʹ|sc=Cyrl}}, {{t|be|адчуць|pf|tr=adčúcʹ|sc=Cyrl}}, {{t|be|чуць|impf|tr=čucʹ|sc=Cyrl}}, {{t|be|пачуць|pf|tr=pačúcʹ|sc=Cyrl}}
 * Bengali: {{t|bn|বোধ করা|tr=bodh kôra|sc=Beng}}
 * Bulgarian: {{t+|bg|усещам|impf|tr=uséštam|sc=Cyrl}}, {{t+|bg|чувствам|impf|tr=čúvstvam|sc=Cyrl}}
-* {{trreq|my}}
+* Burmese: {{t-needed|my}}
 * Chinese:
 *: Mandarin: {{t+|cmn|感到|tr=gǎndào|sc=Hani}}, {{t+|cmn|感覺|sc=Hani}}, {{t+|cmn|感觉|tr=gǎnjué|sc=Hani}}
 * Czech: {{t+|cs|cítit|impf}}
@@ -287,31 +287,31 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|fēla
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|cmn}}: {{t+|cmn|触|tr=chu}}, {{t+|cmn|摸|tr=mo}}, {{t+|cmn|感知|tr=ganzhi}}
-* {{ttbc|cs}}: {{t|cs|pocítit}}, {{t+|cs|cítit}}, {{t|cs|mít pocit}}
-* {{ttbc|nl}}: {{t+|nl|voelen}} (touch), {{t|nl|zich voelen}} (5)
-* {{ttbc|eo}}: {{t|eo|senti}}
-* {{ttbc|fr}}: {{t+|fr|ressentir}}
-* {{ttbc|de}}: {{t+|de|fühlen}}
-* {{ttbc|is}}: {{t+|is|finna}}
-* {{ttbc|id}}: {{t+|id|merasa}}, {{t+|id|merasakan}}, {{t+|id|menganggap}}, {{t|id|beranggap}}, {{t+|id|beranggapan}} (touch)
-* {{ttbc|it}}: {{t+|it|sentire}}, {{t+|it|sentirsi}}
-* {{ttbc|ja}}: {{t+|ja|感じる|tr=[[かんじる]], kanjiru|sc=Jpan}}
+* Mandarin: {{t+check|cmn|触|tr=chu}}, {{t+check|cmn|摸|tr=mo}}, {{t+check|cmn|感知|tr=ganzhi}}
+* Czech: {{t-check|cs|pocítit}}, {{t+check|cs|cítit}}, {{t-check|cs|mít pocit}}
+* Dutch: {{t+check|nl|voelen}} (touch), {{t-check|nl|zich voelen}} (5)
+* Esperanto: {{t-check|eo|senti}}
+* French: {{t+check|fr|ressentir}}
+* German: {{t+check|de|fühlen}}
+* Icelandic: {{t+check|is|finna}}
+* Indonesian: {{t+check|id|merasa}}, {{t+check|id|merasakan}}, {{t+check|id|menganggap}}, {{t-check|id|beranggap}}, {{t+check|id|beranggapan}} (touch)
+* Italian: {{t+check|it|sentire}}, {{t+check|it|sentirsi}}
+* Japanese: {{t+check|ja|感じる|tr=[[かんじる]], kanjiru|sc=Jpan}}
 {{trans-mid}}
-* {{ttbc|ko}}: {{t+|ko|느끼다|sc=Hang}}
-* {{ttbc|la}}: {{t|la|sentīre}}
-* {{ttbc|lv}}: {{t|lv|just}} (1,2,4,5,6), {{t|lv|taustīties}} (3)
-* {{ttbc|pt}}: {{t+|pt|sentir}}, {{t|pt|sentir-se}}
-* {{ttbc|ro}}: {{t+|ro|simți|alt=a (se) simți}}
-* {{ttbc|gd}}: {{t|gd|mothaich}}, {{t|gd|fairich}}
-* {{ttbc|es}}: {{t+|es|sentir}} (1, 2), {{t+|es|sentirse}} (5)
-* {{ttbc|sv}}: {{t+|sv|känna}} (1, 4, 5), {{t|sv|känna på sig}} (2, 7, 8), {{t|sv|känna sig}} (3)
-* {{ttbc|cy}}: {{t+|cy|feel}}
-* {{ttbc|fy}}: {{t|fy|fiele}}
-* {{ttbc|tr}}: {{t+|tr|hissetmek}}
-* {{ttbc|de}}: {{t+|de|fühlen}} (1,2,3)
-* {{ttbc|lv}}: {{t|lv|just}} (1), {{t|lv|taustīt}} (2), {{t|lv|aptaustīt}} (2), {{t|lv|justies}} (3)
-* {{ttbc|ko}}: {{t+|ko|느끼다|sc=Kore}}
+* Korean: {{t+check|ko|느끼다|sc=Hang}}
+* Latin: {{t-check|la|sentīre}}
+* Latvian: {{t-check|lv|just}} (1,2,4,5,6), {{t-check|lv|taustīties}} (3)
+* Portuguese: {{t+check|pt|sentir}}, {{t-check|pt|sentir-se}}
+* Romanian: {{t+check|ro|simți|alt=a (se) simți}}
+* Scottish Gaelic: {{t-check|gd|mothaich}}, {{t-check|gd|fairich}}
+* Spanish: {{t+check|es|sentir}} (1, 2), {{t+check|es|sentirse}} (5)
+* Swedish: {{t+check|sv|känna}} (1, 4, 5), {{t-check|sv|känna på sig}} (2, 7, 8), {{t-check|sv|känna sig}} (3)
+* Welsh: {{t+check|cy|feel}}
+* West Frisian: {{t-check|fy|fiele}}
+* Turkish: {{t+check|tr|hissetmek}}
+* German: {{t+check|de|fühlen}} (1,2,3)
+* Latvian: {{t-check|lv|just}} (1), {{t-check|lv|taustīt}} (2), {{t-check|lv|aptaustīt}} (2), {{t-check|lv|justies}} (3)
+* Korean: {{t+check|ko|느끼다|sc=Kore}}
 {{trans-bottom}}
 
 ====Noun====
