--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -53,7 +53,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Danish: {{t+|da|gardin|n}}
 * Dutch: {{t+|nl|gordijn|n}}
 * Esperanto: {{t|eo|kurteno}}
-* {{trreq|et}}
+* Estonian: {{t-needed|et}}
 * Faroese: {{t|fo|gardina|f}}, {{t|fo|gluggatjald|n}}
 * Finnish: {{t+|fi|verho}}
 * French: {{t+|fr|voil|m}}, {{t+|fr|rideau|m}}
@@ -61,7 +61,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Georgian: {{t|ka|ფარდა|tr=p'arda|sc=Geor}}
 * German: {{t+|de|Vorhang|m}}, {{t+|de|Gardine|f}}
 * Greek: {{t+|el|κουρτίνα|f}}
-* {{trreq|gu}}
+* Gujarati: {{t-needed|gu}}
 * Hebrew: {{t+|he|וילון|m|tr=vilon}}
 * Hindi: {{t|hi|पर्दा|tr=pardā|m}}
 * Hungarian: {{t+|hu|függöny}}
@@ -82,9 +82,9 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Macedonian: {{t|mk|завеса|f|tr=závesa}}, {{t|mk|перде|n|tr=pérde}}
 * Malay: {{t|ms|tirai}}, {{t|ms|tabir}}
 * Norwegian: {{t+|no|gardin|m|f}}
-* {{trreq|nov}}
+* Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|cortina|f}}
-* {{trreq|ps}}
+* Pashto: {{t-needed|ps}}
 * Persian: {{t+|fa|پرده|tr=parde}}
 * Polish: {{t+|pl|zasłona|f}}
 * Portuguese: {{t+|pt|cortina|f}}
@@ -101,21 +101,21 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 * Skolt Sami: {{t|sms|zääˊvesǩ}}
 * Slovak: {{t|sk|opona|f}}
 * Slovene: {{t|sl|zavésa|f}}
-* {{trreq|so}}
+* Somali: {{t-needed|so}}
 * Spanish: {{t+|es|cortina|f}}
 * Swahili: {{t+|sw|pazia}}
 * Swedish: {{t+|sv|gardin|c}}
-* {{trreq|ta}}
+* Tamil: {{t-needed|ta}}
 * Telugu: {{t+|te|తెర|tr=tera}}
 * Thai: {{t|th|ผ้าม่าน|sc=Thai}}
 * Turkish: {{t+|tr|perde}}
 * Urdu: {{t|ur|پردہ|tr=parda|m}}
 * Uzbek: {{t+|uz|parda}}
 * Venetian: {{t|vec|coltrìna|f}}
-* {{trreq|vo}}
+* Volapük: {{t-needed|vo}}
 * Walloon: {{t+|wa|gordene|f}}
 * Welsh: {{t|cy|llen|f}}, {{t|cy|llenni|f-p}}
-* {{trreq|yi}}
+* Yiddish: {{t-needed|yi}}
 {{trans-bottom}}
 
 {{trans-top|piece of cloth in a theater}}
