Migrating [[Template:ttbc]] and [[Template:trreq]] to [[Template:t-check]] and [[Template:t-needed]] <stab#27433228>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -127,7 +127,7 @@ Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, t
 * Hungarian: {{t+|hu|döf}}, {{t+|hu|szúr}}
 * Irish: {{t|ga|sáigh}}, {{t|ga|rop}}
 * Italian: {{t+|it|pugnalare}}, {{t+|it|accoltellare}}
-* {{trreq|ja}}
+* Japanese: {{t-needed|ja}}
 * Latin: {{t|la|confodio}}, {{t|la|fodio}}, {{t|la|perfodio}}, {{t|la|transfodio}}, {{t|la|traicio}}, {{t|la|perfigo}}, {{t|la|perforo}}, {{t|la|pungo}}
 {{trans-mid}}
 * Lithuanian: {{t|lt|badyti}}
