Migrating [[Template:ttbc]] and [[Template:trreq]] to [[Template:t-check]] and [[Template:t-needed]] <vomit#27433234>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -74,7 +74,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Malay: {{t|ms|muntah}}
 * Maltese: {{t|mt|irrimetta}}, {{t|mt|qala'}}
 * Maori: {{t|mi|ruaki}}
-* {{trreq|mn}}
+* Mongolian: {{t-needed|mn}}
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t|no|brekke seg}}
 * Occitan: {{t|oc|vomir}}
 * Old Norse: {{t|non|spýja}}
@@ -138,7 +138,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Italian: {{t+|it|vomito|m}}
 * Japanese: {{t|ja|反吐|tr=へど, hedo|sc=Jpan}}
 * Khmer: {{t|km|កំអួត|tr=kɑm’uət|sc=Khmr}}
-* {{trreq|ko}}
+* Korean: {{t-needed|ko}}
 * Kurdish:
 *: Sorani: {{t|ckb|ڕشانه‌وه‌|sc=ku-Arab}}
 {{trans-mid}}
