Migrating [[Template:ttbc]] to [[Template:t-check]] <saffron#27438317>

--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -177,7 +177,7 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|fa}}: {{t|fa|سورنجان}}
+* Persian: {{t-check|fa|سورنجان}}
 {{trans-mid}}
 * {{ttbc|sa}}: [[केसर]] (kesar), [[केसरं]] (kesaran)
 {{trans-bottom}}
