--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -457,12 +457,12 @@ The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but
 {{trans-bottom}}
 
 {{checktrans-top|could be any sense}}
-* {{ttbc|id}}: {{t|id|tangkap}}, {{t|id|sergap}}
-* {{ttbc|ja}}: {{t|ja|捕まる|tr=[[つかまる]], tsukamaru|sc=Jpan}}, {{t|ja|捕まえる|tr=[[つかまえる]], tsukamaeru|sc=Jpan}}
-* {{ttbc|roa-jer}}: {{t|roa-jer|happer}}
+* Indonesian: {{t-check|id|tangkap}}, {{t-check|id|sergap}}
+* Japanese: {{t-check|ja|捕まる|tr=[[つかまる]], tsukamaru|sc=Jpan}}, {{t-check|ja|捕まえる|tr=[[つかまえる]], tsukamaeru|sc=Jpan}}
+* Jèrriais: {{t-check|roa-jer|happer}}
 {{trans-mid}}
-* {{ttbc|ro}}: {{t|ro|prinde}}
-* {{ttbc|es}}: {{t|es|atrapar}}
+* Romanian: {{t-check|ro|prinde}}
+* Spanish: {{t-check|es|atrapar}}
 {{trans-bottom}}
 
 [[Category:English irregular verbs]]
