--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -137,9 +137,9 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|bg}}: {{t+|bg|златист|sc=Cyrl}}
-* {{ttbc|pt}}: {{t+|pt|loiro}} {{qualifier|Brazil}}
-* {{ttbc|tr}}: {{t+|tr|sarışın}}
+* Bulgarian: {{t+check|bg|златист|sc=Cyrl}}
+* Portuguese: {{t+check|pt|loiro}} {{qualifier|Brazil}}
+* Turkish: {{t+check|tr|sarışın}}
 {{checktrans-bottom}}
 
 ===Derived terms===
