--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -160,7 +160,7 @@ From {{etyl|fro|en}} {{term|substance|lang=fro}}, from {{etyl|la|en}} {{term|sub
 * {{ttbc|ko}}: [[실체]] (silche), [[물질]] (muljil)
 * {{ttbc|lt}}: [[turinys]]
 * {{ttbc|enm}}: [[substaunce]]
-* {{ttbc|fa}}: {{t+|fa|خلاصه|tr=kholâseh}}
+* Persian: {{t+check|fa|خلاصه|tr=kholâseh}}
 * {{ttbc|ro}}: [[substanță]] {{g|f}}
 * {{ttbc|sk}}: [[hmota]] {{g|f}}
 * {{ttbc|tr}}: [[madde]]
