Migrating [[Template:ttbc]] to [[Template:t-check]] <zenith#27438542>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -121,8 +121,8 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, fro
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|eo}}: {{t|eo|zenito}}
-* {{ttbc|ia}}: {{t|ia|zenit}}
+* Esperanto: {{t-check|eo|zenito}}
+* Interlingua: {{t-check|ia|zenit}}
 {{trans-bottom}}
 
 [[de:zenith]]
